--- a/style.css
+++ b/style.css
@@ -5,5 +5,20 @@ body{
   header{
      background-color: rgb(247, 229, 229);
      height: 35 px;
+  
+    MARGIN-LEFT: -20PIX; 
+    MARGIN-RIGHT: -20PIX;
+
+    header h3 {
+       padding-left: 15px;
+      color:blueviolet
+      text-aling: center;
+    font-size: 30px;
   }
+
+
+
+
+
+
 
