--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
-body{
+{<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+body
     background-color: rgb(212, 0, 255);
     color: rgb(230, 255, 253))255, 0, 0);
+    margin:0; 
 }
   header{
      background-color: rgb(247, 229, 229);
-     height: 35 px;
-  
-    MARGIN-LEFT: -20PIX; 
-    MARGIN-RIGHT: -20PIX;
+     padding:10px;
+     border-bottom: 10px solid pink;
+     font-size: 25px;
+     text-decoration: none;
+     display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
     header h3 {
        padding-left: 15px;
