--- a/style.css
+++ b/style.css
@@ -1,55 +1,64 @@
-{<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-body
-    background-color: rgb(212, 0, 255);
-    color: rgb(230, 255, 253))255, 0, 0);
-    margin:0; 
-}
-  header{
-     background-color: rgb(247, 229, 229);
-     padding:10px;
-     border-bottom: 10px solid pink;
-     font-size: 25px;
-     text-decoration: none;
-     display:flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">body background-color: rgb(212, 0, 255);
 
-    header h3 {
-       padding-left: 15px;
-      color:blueviolet
-      text-aling: center;
-    font-size: 30px;
-  }
-    
-
-
-
-nav ul{
- list-style:one ;
- margin: 0;
- padding: 0;
- display: fex;
+body {
+  color: rgb(230, 255, 253))255, 0, 0);
+  margin: 0;
 }
 
-   margin-left: 20px;
-   font-size:   20px;
-}  
-hearder nav ul li a{
-      color:black;
-      text-decoration: none;
-      transition: color 0.5s;
-}
-header nav ul li a:hover{
-     color: rgb(175, 34, 133);
+header {
+  background-color: rgb(247, 229, 229);
+  padding: 10px;
+  border-bottom: 10px solid pink;
+  font-size: 25px;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 }
 
 
+header h3 {
+  font-family: "Luckiest Guy", cursive;
+  font-weight: 400;
+  font-style: normal;
+  padding-left: 15px;
+  color: grey;
+  text-align: center;
+  font-size: 30px;
+}
 
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
 
+nav ul li {
+  margin-left: 20px;
+  font-size: 20px;
+}
 
+header nav ul li a {
+  color: black;
+  text-decoration: none;
+  transition: color 0.5s;
+}
 
+header nav ul li a:hover {
+  color: rgb(255, 3, 238);
+}
 
+.foto {
+  display: flex;
+  justify-content: center;
+}
 
+.foto-perfil {
+  width: 130px;
+  height: 150px;
+  margin: 20px;
+  border: 3px solid pink;
+  border-radius: 8px;
+}
